a2/stage/tests/accept/decl_expr.ul
float main2(int abc, float abc123) {
  int a123;
  int [5] a;
  return 123 + 123 * (456 - 1234123) * abc123 * a[abc*5] - main2(123, abc123 * a[abc*5]);
}

void main() {

}
