a2/stage/tests/reject/3.1.2_invalid.ul
void main() {
    int n;
    while (n) {
        n++;
    }
}
